syntax = "proto3";

package job;
option go_package = "jobpb";

message Job{
    string id = 1;
    string recruiter_id = 2;
    string title = 3;
    string content = 4;
    string region = 5;
    string country = 6;
}

message CreateJobRequest{
    Job job = 1;
}

message CreateJobResponse{
    Job job = 1;// will have job id
}

message ReadJobRequest{
    string job_id = 1;
}

message ReadJobResponse{
    Job job = 1;
}

service JobService{
    rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
    rpc ReadJob(ReadJobRequest) returns (ReadJobResponse);//return NOT_FOUND if not found
}